fix horizontal scroll

--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 .header {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   color: $headerfontcolor;
   background-color: $headerbgcolor;
   background-image: url("../images/cover.jpg");
